infra/k8s/products/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
  - name: "http"
    port: 8001
    targetPort: 8001
