infra/k8s/products/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: products
            port: 
              number: 8001
